@@ -1,12 +1,10 @@
 package cz.mammahelp.tools.centers.mamo;
 
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
-import java.net.URL;
 
 import cz.mammahelp.tools.centers.GenericFeeder;
 
@@ -23,7 +21,8 @@ public class MamoFeeder extends GenericFeeder {
 
 	@Override
 	public java.net.URL getUrl() throws MalformedURLException {
-		return new URL(URL);
+		return new File("tmp/mamograficky-screening--centra--seznam.html").toURI().toURL();
+		// return new URL(URL);
 	}
 
 	@Override
@@ -31,5 +30,10 @@ public class MamoFeeder extends GenericFeeder {
 		return getClass().getResourceAsStream("/templates/mamo_centra.xsl");
 	}
 	
+	
+	@Override
+	protected String getEncoding() {
+		return "iso-8859-2";
+	}
 
 }
